--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
+    "node-cron": "^3.0.2",
     "sequelize": "^6.29.0",
     "sqlite3": "^5.1.4",
     "undici": "^5.20.0"
